* fix bug #2005, fix UI not show on ie9 and ie10.

--- a/module/user/css/login.css
+++ b/module/user/css/login.css
@@ -1,5 +1,4 @@
-body {background: #00B1FD linear-gradient(-90deg, #0072F3 0%, #00B1FD 100%);}
-#main {}
+body {background: #00B1FD linear-gradient(-90deg, #0072F3 0%, #00B1FD 100%); background-color: #00B1FD;}
 #login {max-width: 600px!important; margin: 0 auto; margin-top: 5%;}
 #loginPanel {background: #fff; overflow: hidden; box-shadow: 0 0 20px 0 rgba(0,0,0,.1); border-radius: 3px;}
 #loginPanel > header {padding: 20px; border-bottom: 1px #eee solid; position: relative;}
